1. improved session service: guard concurrent simulate calls with RUNNING status 2. removed redundant spring-boot-starter-web dependency in session service 3. added Javadoc in service session to public service-layer classes 4. added logging across services